--- a/travelia/views/travelia/index.ejs
+++ b/travelia/views/travelia/index.ejs
@@ -74,7 +74,7 @@
     </div>
   </header>
 
-  <!-- header part starts -->
+  <!-- header part ends -->
 
   <!-- picture part starts -->
   <section class="picture-part">
@@ -91,24 +91,27 @@
             <img src="/images/travelia/place-1.jpg" class="d-block w-100 wow heartBeat" data-wow-duration="10s"
               data-wow-iteration="90" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+              <h5>paharpur</h5>
+              <br>
+              <p>Somapuri mahabhihara in paharpur</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="/images/travelia/place-2.jpg" class="d-block w-100 wow pulse" data-wow-duration="3s"
               data-wow-iteration="90" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <h5>St. Martin's island</h5>
+              <br>
+              <p>Saint Martin's Beach</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="/images/travelia/place-3.jpg" class="d-block w-100 wow heartBeat" data-wow-duration="8s"
               data-wow-iteration="90" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+              <h5>Gaur</h5>
+              <br>
+              <p>Chotto sona masjid</p>
             </div>
           </div>
         </div>
@@ -136,10 +139,10 @@
     </div>
     <div class="items2">
       <div class="container">
-        <div class="row">
+        <div class="row ">
           <div class="col-md-3">
               <div class="place text-center">
-                <figure>
+                <figure class="wow slideInLeft" >
 
                   <img src="/images/travelia/chittagong.jpg" alt="">
                   <h3>Chittagong</h3>
@@ -147,7 +150,7 @@
               </div>
           </div>
           <div class="col-md-3">
-              <div class="project">
+              <div class="project wow slideInUp">
                   <div class="project__card">
                     <a href="" class="project__image"><img src="/images/travelia/chitt-1.png" width=600 height=400 alt=""></a>
                     <div class="project__detail">
@@ -160,7 +163,7 @@
           </div>
           <div class="col-md-3">
 
-              <div class="project">
+              <div class="project wow slideInUp">
                   <div class="project__card">
                     <a href="" class="project__image"><img src="/images/travelia/chitt-2.png" width=600 height=400 alt=""></a>
                     <div class="project__detail">
@@ -173,7 +176,7 @@
           </div>
           <div class="col-md-3">
 
-              <div class="project">
+              <div class="project wow slideInUp">
                   <div class="project__card">
                     <a href="" class="project__image"><img src="/images/travelia/chitt-3.png" width=600 height=400 alt=""></a>
                     <div class="project__detail">
@@ -228,7 +231,7 @@
             </div>
             <div class="col-md-3">
                 <div class="place text-center">
-                  <figure>
+                  <figure class="wow lightSpeedIn">
   
                     <img src="/images/travelia/sylhet.jpg" alt="">
                     <h3>Sylhet</h3>
