--- a/views/admin/adminTraveller.ejs
+++ b/views/admin/adminTraveller.ejs
@@ -92,7 +92,7 @@
                                 <i class="fas fa-user-friends"></i>
                             </div>
                             <div class="col-md-9 text-center travel-font">
-                                <a href="/admin/adminTraveller">Travel Guider Info</a>
+                                <a href="/admin/adminTravelGuide">Travel Guider Info</a>
                             </div>
                         </div>
                         <div class="row btns">
