--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -82,7 +82,7 @@
                                 <i class="fas fa-user"></i>
                             </div>
                             <div class="col-md-9 text-center">
-                                <a href="">Customer Info</a>
+                                <a href="/admin/adminTraveller">Traveller Info</a>
                             </div>
                         </div>
 
@@ -92,7 +92,7 @@
                                 <i class="fas fa-user-friends"></i>
                             </div>
                             <div class="col-md-9 text-center travel-font">
-                                <a href="">Travel Guider Info</a>
+                                <a href="/admin/adminTravelGuide">Travel Guider Info</a>
                             </div>
                         </div>
                         <div class="row btns">
@@ -101,7 +101,7 @@
                                 <i class="fas fa-users"></i>
                             </div>
                             <div class="col-md-9 text-center">
-                                <a href="">Hotel Emp Info</a>
+                                <a href="/admin/adminHotelEmp">Hotel Emp Info</a>
                             </div>
                         </div>
                         <div class="row btns">
