--- a/views/travelia/index.ejs
+++ b/views/travelia/index.ejs
@@ -368,18 +368,18 @@
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
         </div>
         <div class="modal-body">
-          <form id="reg_form">
+          <form id="reg_form" action="/registration" method="post">
             <div class="row">
               <div class="col-xs-6 col-sm-6 col-md-6">
                 <div class="form-group">
-                  <input type="text" name="first_name" id="first_name" class="form-control input-sm"
+                  <input type="text" name="firstname" id="first_name" class="form-control input-sm"
                     placeholder="First Name">
                   <div class="invalid-feedback">Oops, you missed first name</div>
                 </div>
               </div>
               <div class="col-xs-6 col-sm-6 col-md-6">
                 <div class="form-group">
-                  <input type="text" name="last_name" id="last_name" class="form-control input-sm"
+                  <input type="text" name="lastname" id="last_name" class="form-control input-sm"
                     placeholder="Last Name">
                   <div class="invalid-feedback">Oops, you missed last name</div>
                 </div>
@@ -393,7 +393,7 @@
 
             <div class="form-group">
               <label for="exampleFormControlSelect1">User type</label>
-              <select class="form-control user_type" name="user_type" id="exampleFormControlSelect1">
+              <select class="form-control user_type" name="usertype" id="exampleFormControlSelect1">
                 <option>Travel guider</option>
                 <option>Hotel Emp</option>
                 <option>Traveller</option>
@@ -406,7 +406,7 @@
             </div>
 
             <div class="form-group">
-              <input type="number" name="phoneNo" id="phoneNo" class="form-control input-sm" placeholder="Phone no">
+              <input type="number" name="phoneno" id="phoneno" class="form-control input-sm" placeholder="Phone no">
               <div class="invalid-feedback">Oops, you missed phone number</div>
             </div>
 
@@ -420,14 +420,14 @@
               </div>
               <div class="col-xs-6 col-sm-6 col-md-6">
                 <div class="form-group">
-                  <input type="text" name="password_confirmation" id="password_confirmation"
+                  <input type="text" name="confirmpassword" id="password_confirmation"
                     class="form-control input-sm" placeholder="Confirm Password">
                   <div class="invalid-feedback">Confirm your password</div>
                 </div>
               </div>
             </div>
 
-            <input type="submit" value="Register" class="btn btn-info btn-block submit">
+            <input type="submit" value="Register" name="submit" class="btn btn-info btn-block submit">
 
           </form>
         </div>
@@ -462,34 +462,34 @@
       $loginemail=$('#loginemail').val();
       $loginpassword=$('#loginpassword').val();
 
-      $("#btnLogin").click(function (event) {
+      // $("#btnLogin").click(function (event) {
 
-        //Fetch form to apply custom Bootstrap validation
-        var form = $("#formLogin")
+      //   //Fetch form to apply custom Bootstrap validation
+      //   var form = $("#formLogin")
 
-        if (form[0].checkValidity() === false) {
-          event.preventDefault()
-          event.stopPropagation()
-        }
-        form.addClass('was-validated');
+      //   if (form[0].checkValidity() === false) {
+      //     event.preventDefault()
+      //     event.stopPropagation()
+      //   }
+      //   form.addClass('was-validated');
 
-        //ajax starts
+      //   //ajax starts
 
-        $.ajax({
-              url: '/registration',
-              type: 'POST',
-              data: { loginemail: $loginemail, loginpassword: $loginpassword },
-              success: function (response) {
-                //var data = JSON.parse(response);
+      //   $.ajax({
+      //         url: '/registration',
+      //         type: 'POST',
+      //         data: { loginemail: $loginemail, loginpassword: $loginpassword },
+      //         success: function (response) {
+      //           //var data = JSON.parse(response);
                
-              },
-              error: function (err) {
-                alert("error");
-              }
-            });
+      //         },
+      //         error: function (err) {
+      //           alert("error");
+      //         }
+      //       });
 
 
-      });
+      // });
 
 
 
