--- a/views/admin/adminHotelinfo.ejs
+++ b/views/admin/adminHotelinfo.ejs
@@ -106,20 +106,20 @@
                         </div>
                         <div class="row btns">
 
-                            <div class="col-md-3">
-                                <i class="fas fa-users"></i>
+                                <div class="col-md-3">
+                                    <i class="fas fa-users"></i>
+                                </div>
+                                <div class="col-md-9 text-center">
+                                    <a href="/admin/adminCustCare">Cust. Care Info</a>
+                                </div>
                             </div>
-                            <div class="col-md-9 text-center">
-                                <a href="/admin/adminCustCare">Cust. Care Info</a>
-                            </div>
-                        </div>
                         <div class="row btns">
 
                             <div class="col-md-3">
                                 <i class="far fa-list-alt"></i>
                             </div>
                             <div class="col-md-9 text-center">
-                                <a href="/admin/adminHotelinfo">Hotels</a>
+                                <a href="">Hotels</a>
                             </div>
                         </div>
                         <div class="row btns">
@@ -138,20 +138,57 @@
                 </div>
                 <div class="col-md-10">
                     <div class="items2">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="users">
-                                    <canvas id="myUser"></canvas>
-                                    <p>Graph of users</p>
+                        
+                            <table class="table table-hover wow flipInX table-dark">
+                                    <thead>
+                                      <tr >
+                                        <th scope="col">#</th>
+                                        <th scope="col">Hotel Emp Email</th>
+                                        <th scope="col">Hotel Name</th>
+                                        <th scope="col">Location</th>
+                                        <th scope="col">Total rooms</th>
+                                        <th scope="col">Types of room</th>
+                                        
+                                        <th scope="col">Status</th>
+                                        <th scope="col">Action</th>
+                                      </tr>
+                                    </thead>
+                                    <tbody>
+                             <% 
+                             var count =0;
+                             for(var i=0 ; i < hotel.length ; i++) { 
+                                 count++;
+                                 if(hotel[i].status=="permitted"){
+                                    var btn="success";
+                                 }
+                                 else{
+                                    var btn = "danger";
+                                 }
+                                %>
+                                   
+                           <form action="" method="post" >
+                           <input type="hidden" name="hotelname" value="<%= hotel[i].hotelname %>">
 
-                                </div>
-                            </div>
-                            <div class="col-md-6">
+                          
+                        
+                               <tr>
+                                   <th scope="row"><%= count %></th>
+                                   <td><%= hotel[i].hotelempmail %></td>
+                                   <td><%= hotel[i].hotelname %></td>
+                                   <td><%= hotel[i].location %></td>
+                                   <td><%= hotel[i].totalroom %></td>
+                                   <td><%= hotel[i].roomtypes %></td>
+                                   
+                                   
+                                   <td> <input type="submit" class="btn btn-<%= btn %>" name="submit" value="<%= hotel[i].status%>"></td>
+                                   <td> <input type="submit" class="btn btn-warning" name="submit" value="delete this"></td>
+                                </tr>
+                            </form> 
+                        
+                     <%   }       %>
+                                    </tbody>
+                                  </table>
 
-                                <canvas id="myProduct"></canvas>
-                                <p>Chart of places</p>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -174,91 +211,6 @@
     <script src="/js/bootstrap.min.js"></script>
     <script src="/js/Chart.min.js"></script>
 
-    <!-- chart js starts -->
-    <script>
-        var ctx = document.getElementById('myUser').getContext('2d');
-        var myUser = new Chart(ctx, {
-            type: 'bar',
-            data: {
-                labels: ['Customers', 'Hotel Emp', 'Travel Guider', 'Care'],
-                datasets: [{
-                    label: 'User Catagory',
-                    data: [7, 3, 3, 10],
-                    backgroundColor: [
-                        'rgba(255, 99, 132, 0.2)',
-                        'rgba(54, 162, 235, 0.2)',
-                        'rgba(255, 206, 86, 0.2)',
-                        'rgba(155, 155, 155, 0.2)'
-
-                    ],
-                    borderColor: [
-                        'rgba(255, 99, 132, 1)',
-                        'rgba(54, 162, 235, 1)',
-                        'rgba(255, 206, 86, 1)',
-                        'rgba(155, 155, 155, 1)'
-                    ],
-                    borderWidth: 1
-                }]
-            },
-            options: {
-                scales: {
-                    yAxes: [{
-                        ticks: {
-                            beginAtZero: true
-                        }
-                    }]
-                },
-                animation: {
-
-                    easing: 'easeOutBounce',
-
-                }
-
-            }
-        });
-
-
-        ///////////
-        var myPie = document.getElementById('myProduct').getContext('2d');
-        var myProduct = new Chart(myPie, {
-            type: 'pie',
-            data: {
-                labels: ['Dhaka', 'Rajshahi', 'Khulna', 'Chittagong', 'Barishal', 'Sylhet'],
-                datasets: [{
-                    label: 'Places chart',
-                    data: [2, 9, 3, 5, 4, 6],
-                    backgroundColor: [
-                        'rgba(180, 24, 180, 0.2)',
-                        'rgba(0, 0, 255, 0.2)',
-                        'rgba(0, 128, 0, 0.2)',
-                        'rgba(255, 255, 0, 0.2)',
-                        'rgba(255, 0, 0, 0.2)',
-                        'rgba(0, 0, 0, 0.2)',
-
-                    ],
-                    borderColor: [
-                        'rgba(180, 24, 180, 1)',
-                        'rgba(0, 0, 255, 1)',
-                        'rgba(0, 128, 0, 1)',
-                        'rgba(255, 255, 0, 1)',
-                        'rgba(255, 0, 0, 1)',
-                        'rgba(0, 0, 0, 1)',
-
-                    ],
-                    borderWidth: 1
-                }]
-            },
-            options: {
-                animation: {
-
-                    easing: 'easeOutBounce',
-
-                }
-
-            }
-        });
-    </script>
-    <!-- chart js ends -->
 
 </body>
 
