--- a/views/admin/adminHotelinfo.ejs
+++ b/views/admin/adminHotelinfo.ejs
@@ -119,7 +119,7 @@
                                 <i class="far fa-list-alt"></i>
                             </div>
                             <div class="col-md-9 text-center">
-                                <a href="">Hotels</a>
+                                <a href="/admin/adminHotelinfo">Hotels</a>
                             </div>
                         </div>
                         <div class="row btns">
@@ -129,6 +129,15 @@
                             </div>
                             <div class="col-md-9 text-center travel-font">
                                 <a href="/admin/adminAddCust">Add cust. care</a>
+                            </div>
+                        </div>
+                        <div class="row btns">
+
+                            <div class="col-md-3">
+                                <i class="fas fa-map-marker-alt"></i>
+                            </div>
+                            <div class="col-md-9 text-center travel-font">
+                                <a href="/admin/adminTravelPlace">Travel Places</a>
                             </div>
                         </div>
 
