--- a/views/admin/adminTravelPlacePic.ejs
+++ b/views/admin/adminTravelPlacePic.ejs
@@ -92,7 +92,7 @@
                                 <i class="fas fa-user-friends"></i>
                             </div>
                             <div class="col-md-9 text-center travel-font">
-                                <a href="/admin/adminTraveller">Travel Guider Info</a>
+                                <a href="/admin/adminTravelGuide">Travel Guider Info</a>
                             </div>
                         </div>
                         <div class="row btns">
@@ -106,17 +106,17 @@
                         </div>
                         <div class="row btns">
 
-                                <div class="col-md-3">
-                                    <i class="fas fa-users"></i>
-                                </div>
-                                <div class="col-md-9 text-center">
-                                    <a href="/admin/adminCustCare">Cust. Care Info</a>
-                                </div>
+                            <div class="col-md-3">
+                                <i class="fas fa-users"></i>
                             </div>
+                            <div class="col-md-9 text-center">
+                                <a href="/admin/adminCustCare">Cust. Care Info</a>
+                            </div>
+                        </div>
                         <div class="row btns">
 
                             <div class="col-md-3">
-                                <i class="far fa-list-alt"></i>
+                                <i class="fas fa-map-marker-alt"></i>
                             </div>
                             <div class="col-md-9 text-center">
                                 <a href="/admin/adminHotelinfo">Hotels</a>
@@ -131,15 +131,6 @@
                                 <a href="/admin/adminAddCust">Add cust. care</a>
                             </div>
                         </div>
-                        <div class="row btns">
-
-                            <div class="col-md-3">
-                                <i class="fas fa-map-marker-alt"></i>
-                            </div>
-                            <div class="col-md-9 text-center travel-font">
-                                <a href="/admin/adminTravelPlace">Travel Places</a>
-                            </div>
-                        </div>
 
 
 
@@ -147,56 +138,30 @@
                 </div>
                 <div class="col-md-10">
                     <div class="items2">
-                        
-                            <table class="table table-hover wow flipInX table-dark">
-                                    <thead>
-                                      <tr >
-                                        <th scope="col">#</th>
-                                        <th scope="col">First Name</th>
-                                        <th scope="col">Last Name</th>
-                                        <th scope="col">Email</th>
-                                        <th scope="col">Home Address</th>
-                                        <th scope="col">Phone No:</th>
-                                        <th scope="col">Password</th>
-                                        <th scope="col">Status</th>
-                                        <th scope="col">Action</th>
-                                      </tr>
-                                    </thead>
-                                    <tbody>
-                             <% 
-                             var count =0;
-                             for(var i=0 ; i < users.length ; i++) { 
-                                 count++;
-                                 if(users[i].status=="permitted"){
-                                    var btn="success";
-                                 }
-                                 else{
-                                    var btn = "danger";
-                                 }
-                                %>
-                                   
-                           <form action="" method="post" >
-                           <input type="hidden" name="email"  value="<%= users[i].usermail %>">
 
-                          
-                        
-                               <tr>
-                                   <th scope="row"><%= count %></th>
-                                   <td><%= users[i].firstname %></td>
-                                   <td><%= users[i].lastname %></td>
-                                   <td><%= users[i].usermail %></td>
-                                   <td><%= users[i].address %></td>
-                                   <td><%= users[i].phoneno %></td>
-                                   <td><%= users[i].password %></td>
-                                   
-                                   <td> <input type="submit" class="btn btn-<%= btn %>" name="submit" value="<%= users[i].status%>"></td>
-                                   <td> <input type="submit" class="btn btn-warning" name="submit" value="delete account"></td>
-                                </tr>
-                            </form> 
-                        
-                     <%   }       %>
-                                    </tbody>
-                                  </table>
+                        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="/images/admin/travelplace/<%= travelplace %>/1.png" height="500" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="/images/admin/travelplace/<%= travelplace %>/2.png" height="500" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="/images/admin/travelplace/<%= travelplace %>/3.png" height="500" class="d-block w-100" alt="...">
+                                </div>
+                            </div>
+                            <a class="carousel-control-prev bg-dark" href="#carouselExampleControls" role="button"
+                                data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next bg-dark" href="#carouselExampleControls" role="button"
+                                data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
 
                     </div>
                 </div>
