--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -131,6 +131,15 @@
                                 <a href="/admin/adminAddCust">Add cust. care</a>
                             </div>
                         </div>
+                        <div class="row btns">
+
+                            <div class="col-md-3">
+                                <i class="fas fa-map-marker-alt"></i>
+                            </div>
+                            <div class="col-md-9 text-center travel-font">
+                                <a href="/admin/adminTravelPlace">Travel Places</a>
+                            </div>
+                        </div>
 
 
 
