--- a/views/admin/adminProfile.ejs
+++ b/views/admin/adminProfile.ejs
@@ -176,11 +176,11 @@
                                   <input type="text" name="password" value="<%= users[0].password %>" class="form-control " id="exampleFormControlInput1">
 
                                   <label for="exampleFormControlInput1">Create Password</label>
-                                  <input type="text" name="create-password" class="form-control password" id="exampleFormControlInput1">
+                                  <input type="text" name="createpassword" class="form-control password" id="exampleFormControlInput1">
                                   
 
                                   <label for="exampleFormControlInput1">Confirm Password</label>
-                                  <input type="text" name="confirm-password" class="form-control confirm-password" id="exampleFormControlInput1">
+                                  <input type="text" name="confirmpassword" class="form-control confirm-password" id="exampleFormControlInput1">
                                   
                                   <input type="submit"  name="update" class="mt-4 btn btn-outline-secondary" value="Update">
                                   
