--- a/views/admin/adminServiceCharge.ejs
+++ b/views/admin/adminServiceCharge.ejs
@@ -140,15 +140,6 @@
                                 <a href="/admin/adminTravelPlace">Travel Places</a>
                             </div>
                         </div>
-                        <div class="row btns">
-
-                                <div class="col-md-3">
-                                        <i class="fas fa-file-invoice-dollar"></i>
-                                </div>
-                                <div class="col-md-9 text-center travel-font">
-                                    <a href="/admin/adminCustAudit">Cust. Care Audit</a>
-                                </div>
-                            </div>
 
 
 
@@ -156,20 +147,98 @@
                 </div>
                 <div class="col-md-10">
                     <div class="items2">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="users">
-                                    <canvas id="myUser"></canvas>
-                                    <p>Graph of users</p>
 
+                        <table class="table table-hover wow flipInX table-dark">
+                            <thead>
+                                <tr>
+                                    <th scope="col">#</th>
+                                    <th scope="col">User Mail</th>
+                                    <!-- <th scope="col">Current Salary</th> -->
+                                    
+                                    <th scope="col">Paid Amount</th>
+
+                                    <th scope="col">Paid Month</th>
+                                  
+                                    <th scope="col">Action</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <% 
+                             var count =0;
+                             for(var i=0 ; i < service.length ; i++) { 
+                                 count++;
+                                 
+                                %>
+
+                                <form action="" method="post">
+                                    <input type="hidden" id="email" name="email" value="<%= service[i].usermail %>">
+                                    <input type="hidden" id="month" name="month" value="<%= service[i].paidmonth %>">
+                                    
+                                    <tr>
+                                        <th scope="row"><%= count %></th>
+                                        <td><%= service[i].usermail %></td>
+                                        <!-- <td><%= audits[i].currentsalary %></td> -->
+                                    
+                                        <td><%= service[i].amount %></td>
+
+                            
+                                        <td><%= service[i].paidmonth %> </td>
+                                        <td> <input type="submit" class="btn btn-warning delete" name="submit"
+                                                value="delete entry"></td>
+                                    </tr>
+                                </form>
+
+                                <%   }       %>
+                            </tbody>
+                        </table>
+
+                        <!-- add user form -->
+
+                        <div class="modal fade " tabindex="-1" role="dialog" aria-hidden="true" id="addCustCare">
+                                <div class=" modal-dialog">
+                                  <div class=" modal-content">
+                            
+                                    <div class="modal-header">
+                                      <h3>Add User</h3>
+                                      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                                    </div>
+                                    <div class="modal-body">
+                                      <form id="reg_form"  method="post">
+                                       
+                            
+                                        <div class="form-group">
+                                          <input type="email" name="email" id="email" class="form-control input-sm" placeholder="Email Address">
+                                          <div class="invalid-feedback">Oops, you missed email address</div>
+                                        </div>
+                                        
+                                        <div class="form-group">
+                                                <input type="text" name="month"  class="form-control input-sm" placeholder="Salary paid month">
+                                                <div class="invalid-feedback">Oops, you missed one fields</div>
+                                        </div>
+
+                                        <div class="form-group">
+                                            <input type="number" name="amount"  class="form-control input-sm" placeholder="Salary paid month">
+                                            <div class="invalid-feedback">Oops, you missed one fields</div>
+                                    </div>
+                            
+                                        
+                            
+                                        <input type="submit" value="submit" name="submit" class="btn btn-info btn-block submit">
+                            
+                                      </form>
+                                    </div>
+                                  </div>
                                 </div>
-                            </div>
-                            <div class="col-md-6">
+                              </div>
 
-                                <canvas id="myProduct"></canvas>
-                                <p>Chart of places</p>
-                            </div>
-                        </div>
+                              <a href="#addCustCare" role="button" class="btn btn-outline-success mr-4" data-toggle="modal">ADD ENTRY</a>
+
+
+
+
+                        <!--  -->
+
+
                     </div>
                 </div>
             </div>
@@ -192,92 +261,31 @@
     <script src="/js/bootstrap.min.js"></script>
     <script src="/js/Chart.min.js"></script>
 
-    <!-- chart js starts -->
-    <script>
-        var ctx = document.getElementById('myUser').getContext('2d');
-        var myUser = new Chart(ctx, {
-            type: 'bar',
-            data: {
-                labels: ['Customers', 'Hotel Emp', 'Travel Guider', 'Care'],
-                datasets: [{
-                    label: 'User Catagory',
-                    data: [7, 3, 3, 10],
-                    backgroundColor: [
-                        'rgba(255, 99, 132, 0.2)',
-                        'rgba(54, 162, 235, 0.2)',
-                        'rgba(255, 206, 86, 0.2)',
-                        'rgba(155, 155, 155, 0.2)'
-
-                    ],
-                    borderColor: [
-                        'rgba(255, 99, 132, 1)',
-                        'rgba(54, 162, 235, 1)',
-                        'rgba(255, 206, 86, 1)',
-                        'rgba(155, 155, 155, 1)'
-                    ],
-                    borderWidth: 1
-                }]
-            },
-            options: {
-                scales: {
-                    yAxes: [{
-                        ticks: {
-                            beginAtZero: true
-                        }
-                    }]
-                },
-                animation: {
-
-                    easing: 'easeOutBounce',
-
-                }
-
-            }
-        });
-
-
-        ///////////
-        var myPie = document.getElementById('myProduct').getContext('2d');
-        var myProduct = new Chart(myPie, {
-            type: 'pie',
-            data: {
-                labels: ['Dhaka', 'Rajshahi', 'Khulna', 'Chittagong', 'Barishal', 'Sylhet'],
-                datasets: [{
-                    label: 'Places chart',
-                    data: [2, 9, 3, 5, 4, 6],
-                    backgroundColor: [
-                        'rgba(180, 24, 180, 0.2)',
-                        'rgba(0, 0, 255, 0.2)',
-                        'rgba(0, 128, 0, 0.2)',
-                        'rgba(255, 255, 0, 0.2)',
-                        'rgba(255, 0, 0, 0.2)',
-                        'rgba(0, 0, 0, 0.2)',
-
-                    ],
-                    borderColor: [
-                        'rgba(180, 24, 180, 1)',
-                        'rgba(0, 0, 255, 1)',
-                        'rgba(0, 128, 0, 1)',
-                        'rgba(255, 255, 0, 1)',
-                        'rgba(255, 0, 0, 1)',
-                        'rgba(0, 0, 0, 1)',
-
-                    ],
-                    borderWidth: 1
-                }]
-            },
-            options: {
-                animation: {
-
-                    easing: 'easeOutBounce',
-
-                }
-
-            }
-        });
-    </script>
-    <!-- chart js ends -->
 
 </body>
+
+<script>
+
+    $(document).ready(function(){
+        // $('.delete').click(function(){
+
+        //     $loginemail=$('#email').val();
+        //     $paidmonth=$('#month').val();
+        //       $.ajax({
+        //           url: '/admin',
+        //           type: 'POST',
+        //           data: { loginemail: $loginemail , paidmonth:$paidmonth },
+        //           success: function (response) {
+        //             //var data = JSON.parse(response);
+                   
+        //           },
+        //           error: function (err) {
+        //             alert("error");
+        //           }
+        //         });
+        // });
+    });
+
+</script>
 
 </html>
