--- a/views/admin/adminCustAudit.ejs
+++ b/views/admin/adminCustAudit.ejs
@@ -140,6 +140,24 @@
                                 <a href="/admin/adminTravelPlace">Travel Places</a>
                             </div>
                         </div>
+                        <div class="row btns">
+
+                            <div class="col-md-3">
+                                    <i class="fas fa-file-invoice-dollar"></i>
+                            </div>
+                            <div class="col-md-9 text-center travel-font">
+                                <a href="/admin/adminCustAudit">Cust. Care Audit</a>
+                            </div>
+                      </div>
+                      <div class="row btns">
+
+                        <div class="col-md-3">
+                                <i class="fas fa-file-invoice-dollar"></i>
+                        </div>
+                        <div class="col-md-9 text-center travel-font">
+                            <a href="/admin/adminServiceCharge">Service Charge</a>
+                        </div>
+                  </div>
 
 
 
