--- a/views/admin/adminServiceCharge.ejs
+++ b/views/admin/adminServiceCharge.ejs
@@ -140,6 +140,24 @@
                                 <a href="/admin/adminTravelPlace">Travel Places</a>
                             </div>
                         </div>
+                        <div class="row btns">
+
+                            <div class="col-md-3">
+                                    <i class="fas fa-file-invoice-dollar"></i>
+                            </div>
+                            <div class="col-md-9 text-center travel-font">
+                                <a href="/admin/adminCustAudit">Cust. Care Audit</a>
+                            </div>
+                      </div>
+                      <div class="row btns">
+
+                        <div class="col-md-3">
+                                <i class="fas fa-file-invoice-dollar"></i>
+                        </div>
+                        <div class="col-md-9 text-center travel-font">
+                            <a href="/admin/adminServiceCharge">Service Charge</a>
+                        </div>
+                  </div>
 
 
 
@@ -152,7 +170,7 @@
                             <thead>
                                 <tr>
                                     <th scope="col">#</th>
-                                    <th scope="col">User Mail</th>
+                                    <th scope="col">User Email</th>
                                     <!-- <th scope="col">Current Salary</th> -->
                                     
                                     <th scope="col">Paid Amount</th>
@@ -177,7 +195,7 @@
                                     <tr>
                                         <th scope="row"><%= count %></th>
                                         <td><%= service[i].usermail %></td>
-                                        <!-- <td><%= audits[i].currentsalary %></td> -->
+                                        
                                     
                                         <td><%= service[i].amount %></td>
 
@@ -212,12 +230,12 @@
                                         </div>
                                         
                                         <div class="form-group">
-                                                <input type="text" name="month"  class="form-control input-sm" placeholder="Salary paid month">
+                                                <input type="text" name="month"  class="form-control input-sm" placeholder="Charge paid month">
                                                 <div class="invalid-feedback">Oops, you missed one fields</div>
                                         </div>
 
                                         <div class="form-group">
-                                            <input type="number" name="amount"  class="form-control input-sm" placeholder="Salary paid month">
+                                            <input type="number" name="amount"  class="form-control input-sm" placeholder="Charge paid amount">
                                             <div class="invalid-feedback">Oops, you missed one fields</div>
                                     </div>
                             
